Fix overflow

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@ body {
 }
 
 h1 {
-    font-size: 6rem;
+    font-size: 4rem;
 }
 
 div {
-    height: 25rem;
+    height: 20rem;
     width: 100%;
     background-color: white;
     font-size: 2rem;
